[package]
name = "bomiot_check"
version = "0.2.8"
edition = "2021"

[lib]
name = "bomiot_check"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.19", features = ["extension-module"] }
mac = { address = "1.1.4" }
chrono = "0.4"
aes-gcm = "0.10"
base64 = "0.21"
rand = "0.8"
openssl = "0.10"