[package]
name = "bomiot_check"
version = "0.3.2"
edition = "2021"

[lib]
name = "bomiot_check"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.19", features = ["extension-module"] }
chrono = "0.4"
aes-gcm = "0.10"
mac_address = "1"
rand = "0.8"
base64 = "0.21"

[build-dependencies]
pyo3-build-config = "0.19"