[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "bomiot_check"
version = "0.3.0"
description = "A Python package for MAC address validation and encryption"
authors = [{ name = "Bomiot", email = "Singosgu@gmail.com" }]
readme = "README.md"
homepage = "https://github.com/Bomiot/Bomiot"
repository = "https://github.com/Bomiot/Bomiot"
keywords = ["Bomiot", "bomiot"]
include = [
    "LICENSE"
]

exclude = [
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.maturin]
module-name = "bomiot_check"
features = ["pyo3/extension-module"]
python-source = "python_src"